--- a/fe/package.json
+++ b/fe/package.json
@@ -21,8 +21,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "lucide-react": "^0.545.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.13"
   },
