--- a/be/package.json
+++ b/be/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@aws-sdk/client-cognito-identity-provider": "^3.914.0",
 		"@aws-sdk/client-dynamodb": "^3.890.0",
 		"@aws-sdk/util-dynamodb": "^3.890.0",
 		"aws-jwt-verify": "^5.1.0",
