--- a/fe/package.json
+++ b/fe/package.json
@@ -23,21 +23,25 @@
     "express": "^5.1.0",
     "lucide-react": "^0.545.0",
     "react": "^18.3.1",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.13"
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.15",
     "vite": "^7.1.2",
     "vite-plugin-node-polyfills": "^0.24.0"
   },
