--- a/fe/package.json
+++ b/fe/package.json
@@ -18,6 +18,7 @@
 		"@tailwindcss/vite": "^4.1.13",
 		"amazon-cognito-identity-js": "^6.3.15",
 		"aws-amplify": "^6.15.6",
+		"axios": "^1.13.2",
 		"body-parser": "^2.2.0",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.2",
@@ -27,12 +28,15 @@
 		"lucide-react": "^0.545.0",
 		"react": "^18.3.1",
 		"react-custom-roulette": "^1.4.1",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
 		"react-icons": "^5.5.0",
 		"react-router-dom": "^7.8.2",
 		"react-toastify": "^11.0.5",
-		"sweetalert2": "^11.26.3"
+		"sweetalert2": "^11.26.3",
+		"swr": "^2.3.6"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.33.0",
